force-app/main/default/objects/OPP_Cobroker__c/OPP_Cobroker__c.object-meta.xml
<CustomObject>
    <label>Co-Broker</label>
    <nameField>
        <displayFormat>COB-{00000000}</displayFormat>
        <label>Co-Broker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Broker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>