force-app/main/default/objects/OPP_Cobroker__c/fields/Cobroker__c.field-meta.xml
<CustomField>
    <fullName>Cobroker__c</fullName>
    <label>(X)Co-broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_BizRegion</valueSetName>
    </valueSet>
</CustomField>