force-app/main/default/objects/OPP_Cobroker__c/fields/CobrokerContact_lk__c.field-meta.xml
<CustomField>
    <fullName>CobrokerContact_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-broker contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Co-Broker</relationshipLabel>
    <relationshipName>CoBrokers</relationshipName>
    <type>Lookup</type>
</CustomField>