force-app/main/default/objects/OPP_Cobroker__c/fields/CobrokerName_lk__c.field-meta.xml
<CustomField>
    <fullName>CobrokerName_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-broker name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Co-Broker</relationshipLabel>
    <relationshipName>CoBrokers</relationshipName>
    <type>Lookup</type>
</CustomField>