force-app/main/default/objects/OPP_Cobroker__c/fields/CobrokerUser_lk__c.field-meta.xml
<CustomField>
    <fullName>CobrokerUser_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-broker name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CoBrokers</relationshipName>
    <type>Lookup</type>
</CustomField>