force-app/main/default/objects/OPP_Cobroker__c/fields/CobrokingType__c.field-meta.xml
<CustomField>
    <fullName>CobrokingType__c</fullName>
    <label>Co-broking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producing</fullName>
            </value>
            <value>
                <fullName>Placing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>