force-app/main/default/objects/OPP_Cobroker__c/fields/LKAdminFeePct__c.field-meta.xml
<CustomField>
    <fullName>LKAdminFeePct__c</fullName>
    <label>LK Admin Fee(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>