force-app/main/default/objects/OPP_Cobroker__c/fields/LKApproved__c.field-meta.xml
<CustomField>
    <fullName>LKApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LK Approved</label>
    <type>Checkbox</type>
</CustomField>