force-app/main/default/objects/OPP_Cobroker__c/fields/LKCobroker_lk__c.field-meta.xml
<CustomField>
    <fullName>LKCobroker_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Co-Broker (Co-broker)</relationshipLabel>
    <relationshipName>CoBrokerByLKCobroker</relationshipName>
    <type>Lookup</type>
</CustomField>