force-app/main/default/objects/OPP_Cobroker__c/fields/LKCobroking_is__c.field-meta.xml
<CustomField>
    <fullName>LKCobroking_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LK Co-Broking</label>
    <type>Checkbox</type>
</CustomField>