force-app/main/default/objects/OPP_Cobroker__c/fields/Opportunity_md__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_md__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Co-Broker</relationshipLabel>
    <relationshipName>CoBrokers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>