force-app/main/default/objects/OPP_Cobroker__c/fields/SettlementType__c.field-meta.xml
<CustomField>
    <fullName>SettlementType__c</fullName>
    <label>Settlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Together</fullName>
            </value>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>