force-app/main/default/objects/OPP_Cobroker__c/fields/Sharing_is__c.field-meta.xml
<CustomField>
    <fullName>Sharing_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sharing Y/N</label>
    <type>Checkbox</type>
</CustomField>