force-app/main/default/objects/OPP_Cobroker__c/fields/SharingBrkgAdj_is__c.field-meta.xml
<CustomField>
    <fullName>SharingBrkgAdj_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sharing for Brkg Adj</label>
    <type>Checkbox</type>
</CustomField>