force-app/main/default/objects/OPP_Cobroker__c/fields/SharingPct__c.field-meta.xml
<CustomField>
    <fullName>SharingPct__c</fullName>
    <label>Sharing(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>